version 1.0.0 -
. [NEW] ccpSegmentIntersect & ccpPointIntersect: Added helper functions for ccpLineIntersect (issue #1193)
. [NEW] Director: frames is a readonly property
. [NEW] Scheduler: Added isTargetPaused method
. [NEW] Sprite: Debugging draw for texture (issue #879)
. [NEW] Textures: PVR supports NPOT textures
. [FIX] CCArray: ForEach prepends "__" to inner variables to prevent conflict
. [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
. [FIX] cocosLive: fixed memory leak in ScoreServerPost
. [FIX] Director: Added asserts to prevent calling startAnimation twice.
. [FIX] Tests: Fixed memory leak in ParticleTest
. [FIX] Tests: Fixed memory leak in cocosLiveTest
. [FIX] TouchDispatcher: added setPriority (issue #757)
. [FIX] Xcode: cocos2d compiles OK with Xcode 4.2 + llvm 3.0
. [3RD] Chipmunk: updated to v5.3.5

version 1.0-rc3 - 31-May-2011
. [NEW] Actions: Added SkewTo and SkewBy actions
. [NEW] LabelTTF: Added support for LineBreakMode. Mac only supports Word-Break.
. [NEW] Node / Sprite: Added support for SkewX and SkewY properties
. [NEW] Tests: Added skewX, skewY tests for sprites and actions. Added linebreak tests for LabelTTF.
. [NEW] TextureCache: Added dumpCachedTextureInfo method. Shows the RAM used by the cached textures (issue #1154)
. [FIX] cocosLive: Fixed memory leaks in NSURLConnection
. [FIX] Sprites: DisplayedFrame returns the correct frame (issue #1182)
. [FIX] Templates: Supports spaces in project name (issue #1158)
. [FIX] TextureCache: Textures are autoreleased to prevent a crash in multi-threading environments
. [FIX] TexturePVR: clean glError() before creating textures
. [FIX] TMX Maps: Consume less memory (only what is needed), faster loading times (issue #1175)
. [FIX-MAC] Tests: Added test case for issue #1071
. [FIX-MAC] Director: Doesn't crash when entering fullscreen if window is not Key (issue #1185)

version 1.0-rc2 - 03-May-2011