@@ -432,6 +432,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		patches for CocosNode
 	* Sergey Tikhonov (AKA haqu) (http://haqu.net)
 		Sprite: Added texture debugging draw
+		Menu: MenuItemFont can change the font name and family once it is instanced
 	* sflory:
 		new way to added CGImageRef to TextureMgr
 		added unicode support in BitmapFontAtlas
